--- a/package.json
+++ b/package.json
@@ -47,17 +47,21 @@
     "framer-motion": "^11.18.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.2",
+    "mongodb": "^6.19.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
