--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.2",
     "mongodb": "^6.19.0",
+    "mongoose": "^8.18.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
